--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lenis": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-in-viewport": "^1.0.0-beta.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
